<resources>
    <string name="app_name">personas</string>
    <string name="crear_persona">Crear personas</string>
    <string name="ingresar_nombre">ingresar nombre</string>
    <string name="numero">No.</string>
    <string name="lbl_cedula">Cedula</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_listar_personas">Listar Personas</string>
    <string name="apellido">apellido</string>
    <string name="lbl_ingresar_cedula">cedula</string>
    <string name="Limpiar">Limpiar</string>
    <string name="guardar">Guardar</string>
    <string name="listar">Listar</string>
    <string name="crear">Crear</string>
    <string name="mensaje_guardado_exitosamente">Guardado exitosamente</string>
    <string name="mensaje_error_cedula">ingrese cedula</string>
    <string name="mensaje_error_nombre">ingrese nombre</string>
    <string name="mensaje_error_apellido">ingrese apellido</string>

    <string-array name="opciones">
        <item>@string/crear</item>
        <item>@string/listar</item>
    </string-array>
</resources>
