<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarPersonas">

    <TextView
        android:id="@+id/idTitulo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_listar_personas"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/tblPersonas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tblRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/numero" />

            <TextView
                android:id="@+id/lblCedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/lbl_cedula" />

            <TextView
                android:id="@+id/Nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/lbl_nombre" />

            <TextView
                android:id="@+id/lblApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/lbl_apellido" />
        </TableRow>
    </TableLayout>

</LinearLayout>